# intuitive-care

./: .env.example  .gitignore  Makefile  README.md  postman_collection.json
backend/: __init__.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  api.py  routes.py
backend/database/: __init__.py  db_session.py  init_db.py  models.py  settings.py
backend/etl/: __init__.py  aggregator.py  ans_downloader.py  clients.py  consolidator.py  constants.py  file_filter.py  libs.py  run_ex_1.py  run_ex_2.py  zip_extractor.py
backend/sql/: db_schema.sql  load_data.sql  queries.sql
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: DespesasChart.vue  EstatisticasComplementares.vue  OperadoraModal.vue  OperadorasTable.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/views/: HomeView.vue  OperadoraView.vue
